--- a/MyWallet-Client/src/main/resources/application.properties
+++ b/MyWallet-Client/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 !Pokazywanie zapytan sql-a
 spring.jpa.show-sql: true
+
+spring.application.name=client
+server.port=8081
