--- a/MyWallet-Client/pom.xml
+++ b/MyWallet-Client/pom.xml
@@ -49,7 +49,12 @@
 		</dependency>
 		<!-- SWAGGER-->
 	
-
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
