--- a/MyWallet-Client/pom.xml
+++ b/MyWallet-Client/pom.xml
@@ -9,14 +9,15 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>pl.piasecki</groupId>
-	<artifactId>Wallet</artifactId>
+	<artifactId>MyWalletClient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Wallet</name>
-	<description>Demo project for Spring Boot</description> 
+	<packaging>jar</packaging>
+	<name>MyWalletClient</name>
+	<description>MyWalletClient</description> 
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,15 +59,12 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
-		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-
-			
 		</plugins>
 	</build>
 
