--- a/MyWallet-Client/src/main/resources/application.properties
+++ b/MyWallet-Client/src/main/resources/application.properties
@@ -1,16 +1,4 @@
-spring.data.rest.base-path=/api
-
-!Dzieki temu HIBERNATE aktualizuje schemat bazy danych na podstawie obiektow w aplikacji 
-spring.jpa.hibernate.ddl-auto=update
-
-!DO MYSQL - wlasciwosci do bazy MYSQL
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mywallet
-spring.datasource.username=student
-spring.datasource.password=student
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-!Pokazywanie zapytan sql-a
-spring.jpa.show-sql: true
-
 spring.application.name=client
 server.port=8081
+
+restClient.server=http://localhost:8080
